--- a/dev/pug/section/payment/calculator.pug
+++ b/dev/pug/section/payment/calculator.pug
@@ -32,7 +32,7 @@ section#calculator.payment-calculator
           // delivery-icon | photo-icon | retush-icon | 360-icon
           +icon('delivery-icon')
         .payment-calculator__item-info
-          h5.payment-calculator__item-title Съемка товара<br>360 градусов 
+          h5.payment-calculator__item-title Модельная и предметная сьемка
           p.payment-calculator__item-desc.payment-calculator__item-desc--auto
             span.title цена за товар 
             span.price 10 <i class="rouble-icon"></i>
