--- a/dev/static/stylus/section/index/hero.styl
+++ b/dev/static/stylus/section/index/hero.styl
@@ -1,5 +1,5 @@
 .index-hero
-  margin-top -141px
+  margin-top -101px
   position relative
   .container
     position absolute
@@ -8,7 +8,7 @@
     bottom 0
     right 0
   @media (max-width breakpoint-lg)
-    margin-top -121px
+    margin-top -81px
   @media (max-width breakpoint-md)
     margin-top 0
 
@@ -19,7 +19,7 @@
   right 0
   bottom 0
   width 100%
-  padding-top 56.25%
+  min-height 100vh
   &:after
     content ''
     display block
@@ -35,6 +35,7 @@
     left 0
     width 100%
     height 100%
+    object-fit cover
     &.mobile
       display none
   @media (max-width breakpoint-md)
@@ -43,7 +44,6 @@
     min-height 500px
     max-height 654px
     video
-      object-fit cover
       &.desktop
         display none
       &.mobile
