update calc select

--- a/dev/pug/section/payment/calculator.pug
+++ b/dev/pug/section/payment/calculator.pug
@@ -52,7 +52,11 @@ section#calculator.payment-calculator
         .form-select.select-field
           span.select-field__active Съемка товара
           ul.select-field__list
-            li.select-field__item Мужской
-            li.select-field__item Женский
+            li.select-field__item Модельная и предметная съемка 
+              span 40 <i class="rouble-icon"></i> / артикул
+            li.select-field__item Отбор и доставка товара 
+              span 10 <i class="rouble-icon"></i> / товар
+            li.select-field__item Обработка сторонних фотографий 
+              span 40 <i class="rouble-icon"></i> / наименование
     h4.payment-calculator__total Итого сумма к оплате:
       span.payment-calculator__total-summ 68 700 Р
