add modal offer

--- a/dev/pug/section/payment/human.pug
+++ b/dev/pug/section/payment/human.pug
@@ -3,5 +3,4 @@ form.payment-human.form(data-validation)
     h5.form__subtitle.payment-human__title Введите сумму
     .form-group
       input.form-group__input(type="num" data-name="text" placeholder="Введите сумму за услуги" data-summ)
-  button.btn.btn--dark.payment-human__btn(type="submit")
-    span Оплатить
+  include ./actions
