--- a/dev/pug/section/payment/organization.pug
+++ b/dev/pug/section/payment/organization.pug
@@ -35,5 +35,4 @@ form.payment-organization.form(data-validation)
     .form-group.payment-organization__summ
       label.form-group__label(for="org-summ") Сумма 
       input.form-group__input(type="num" data-name="text" data-summ id="org-summ" placeholder="Введите сумму за услуги")
-  button.btn.btn--dark.payment-organization__btn(type="submit")
-    span Оплатить
+  include ./actions
