--- a/dev/static/stylus/section/payment/organization.styl
+++ b/dev/static/stylus/section/payment/organization.styl
@@ -1,6 +1,10 @@
 .payment-organization
   max-width 600px
   margin 0 auto
+  .payment-actions__btn
+    margin 0 auto
+  .payment-actions__text
+    text-align center
   @media (max-width breakpoint-md)
     padding 0 16px
 
