update closing modal

--- a/dev/pug/section/card/views.pug
+++ b/dev/pug/section/card/views.pug
@@ -43,4 +43,4 @@
       .card-views__display-slide
         img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 7")
     .card-views__display-video
-      video(src="app/img/content/videoplayback.mp4" controls)
+      video(data-video="app/img/content/videoplayback.mp4" controls)
