--- a/dev/static/stylus/common/menu.styl
+++ b/dev/static/stylus/common/menu.styl
@@ -14,6 +14,8 @@
     margin-right 10px
   @media (max-width breakpoint-md)
     margin-right 0
+    border-top 1px solid gray-2
+    border-bottom 1px solid gray-2
 
 .menu__link
   font-size 18px
@@ -43,7 +45,7 @@
     &.active
       text-decoration none
     &+&
-      border-top 1px solid #4F4F4F
+      border-top 1px solid gray-2
     &.logo
       display none
 
