--- a/dev/pug/section/card/modal.pug
+++ b/dev/pug/section/card/modal.pug
@@ -1,4 +1,4 @@
-.card-modal.remodal(data-remodal-id="name_slug")
+.card-modal(data-remodal-id="name_slug")
   .card-modal__wrap
     include ./views
     include ./info
