--- a/dev/static/stylus/section/payment/calculator.styl
+++ b/dev/static/stylus/section/payment/calculator.styl
@@ -164,6 +164,22 @@
   @media (max-width 374px)
     left 85px
 
+.payment-calculator__item-sub-add
+  display flex
+  margin-bottom 10px
+  cursor pointer
+  svg
+    width 18px
+    height 18px
+    fill #9B9B9B
+    margin-right 8px
+  span
+    color gray-4
+    letter-spacing 0.8px
+
+.payment-calculator__item-sub-input
+  display none
+
 .payment-calculator__item-count
   width 115px
   margin-right 25px
