--- a/dev/pug/section/payment/calculator.pug
+++ b/dev/pug/section/payment/calculator.pug
@@ -38,7 +38,10 @@ section#calculator.payment-calculator
             span.price 10 <i class="rouble-icon"></i>
         // В остальных услугах можно удалить этот блок
         .payment-calculator__item-sub
-          input.form-group__input(type="text" placeholder="Акт приема")
+          label.payment-calculator__item-sub-add(for="calc-file-add")
+            +icon('file-add')
+            span Акт приема
+          input.payment-calculator__item-sub-input(type="file" placeholder="Акт приема" id="calc-file-add")
           input.form-group__input(type="text" placeholder="Акт возврата")
         .payment-calculator__item-count
           input.form-group__input(type="text" placeholder="Количество")
