add ovh for display slider

--- a/dev/static/stylus/section/card/views.styl
+++ b/dev/static/stylus/section/card/views.styl
@@ -102,8 +102,13 @@
 .card-views__display
   position relative
   align-self flex-start
+  max-height 480px
+  overflow hidden
+  @media (max-width breakpoint-lg)
+    max-height 400px
   @media (max-width breakpoint-md)
     max-width 100%
+    max-height auto
 
 .card-views__display-text
   position absolute
