--- a/dev/static/stylus/section/card/views.styl
+++ b/dev/static/stylus/section/card/views.styl
@@ -107,8 +107,12 @@
   @media (max-width breakpoint-lg)
     max-height 400px
   @media (max-width breakpoint-md)
-    max-width 100%
-    max-height auto
+    width 100%
+    max-height 640px
+  @media (max-width breakpoint-sm)
+    max-height 500px
+  @media (max-width breakpoint-ssm)
+    max-height 430px
 
 .card-views__display-text
   position absolute
@@ -172,8 +176,11 @@
   @media (max-width breakpoint-lg)
     max-width 300px
   @media (max-width breakpoint-md)
-    max-width 100%
+    max-width 480px
     border-radius 0
+  @media (max-width breakpoint-sm)
+    max-width 375px
+    
 
 .card-views__display-slide
   @media (max-width breakpoint-md)
