--- a/dev/pug/modules/menu.pug
+++ b/dev/pug/modules/menu.pug
@@ -6,4 +6,4 @@ nav.menu
   .menu__link-group
     a.menu__link(href="payment.html") Оплата
     span.menu__link-count 1
-  button.menu__link(type="button" data-remodal-target="contact-modal") Контакты
+  button.menu__link(type="button" data-modal="#contact-modal") Контакты
