--- a/dev/pug/section/card/info.pug
+++ b/dev/pug/section/card/info.pug
@@ -1,5 +1,5 @@
 .card-info
-  button.card-info__close.modal-close(type="button" aria-label="Закрыть карточку" data-remodal-action="close")
+  a.card-info__close.modal-close(href="#close" aria-label="Закрыть карточку" rel="modal:close")
     +icon('close-modal')
   h1.card-info__name Яков Зорянкин
   .card-info__wrap
