--- a/dev/static/stylus/base/general.styl
+++ b/dev/static/stylus/base/general.styl
@@ -38,3 +38,10 @@
 		padding-top 50px
 		&.not-paddding-top
 			padding-top 0
+
+.blocker
+	z-index 100
+	.modal
+		border-radius 0
+		a.close-modal
+			display none
