--- a/dev/pug/section/card/modal3.pug
+++ b/dev/pug/section/card/modal3.pug
@@ -1,4 +1,4 @@
-.card-modal(data-remodal-id="name_slug3")
+.card-modal.modal(id="name_slug3")
   .card-modal__wrap
     include ./views
     include ./info
