--- a/dev/static/stylus/section/card/index.styl
+++ b/dev/static/stylus/section/card/index.styl
@@ -2,6 +2,7 @@
   padding 45px 50px
   max-width 95%
   @media (max-width breakpoint-llg)
+    width 100%
     max-width 100%
     padding 45px 20px
   @media (max-width breakpoint-md)
