--- a/dev/pug/section/catalog/block2.pug
+++ b/dev/pug/section/catalog/block2.pug
@@ -1,4 +1,4 @@
-.catalog-list-block(data-modal="#name_slug2")
+.catalog-list-block(data-modal-id="name_slug2")
   .catalog-list-block__image
     img(src="app/img/content/catalog-list.jpg" alt="имя")
   .catalog-list-block__row
