--- a/dev/pug/section/card/views.pug
+++ b/dev/pug/section/card/views.pug
@@ -29,18 +29,18 @@
       +icon('arrow-right')
     .card-views__display-slider
       .card-views__display-slide
-        img(data-lazy="app/img/content/card.jpg" alt="Просмотр ИМЯ 1")
+        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 1")
       .card-views__display-slide
-        img(data-lazy="app/img/content/card.jpg" alt="Просмотр ИМЯ 2")
+        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 2")
       .card-views__display-slide
-        img(data-lazy="app/img/content/card.jpg" alt="Просмотр ИМЯ 3")
+        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 3")
       .card-views__display-slide
-        img(data-lazy="app/img/content/card.jpg" alt="Просмотр ИМЯ 4")
+        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 4")
       .card-views__display-slide
-        img(data-lazy="app/img/content/card.jpg" alt="Просмотр ИМЯ 5")
+        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 5")
       .card-views__display-slide
-        img(data-lazy="app/img/content/card.jpg" alt="Просмотр ИМЯ 6")
+        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 6")
       .card-views__display-slide
-        img(data-lazy="app/img/content/card.jpg" alt="Просмотр ИМЯ 7")
+        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 7")
     .card-views__display-video
       video(data-video="app/img/content/videoplayback.mp4" controls)
