fix payment modal and change slide

--- a/dev/pug/pages/payment.pug
+++ b/dev/pug/pages/payment.pug
@@ -16,6 +16,4 @@ block content
 				include ../section/payment/human
 			.payment-page__tab
 				include ../section/payment/organization
-
-block script
-	script(src="https://cdn.jsdelivr.net/npm/vue")
+		include ../modules/payment-modal
