--- a/dev/pug/section/card/views.pug
+++ b/dev/pug/section/card/views.pug
@@ -1,20 +1,13 @@
 .card-views
   .card-views__thumbs
     .card-views__thumbs-slider
-      .card-views__thumbs-slide
-        img(data-lazy="app/img/content/card-thumb.jpg" alt="Предпросмотр ИМЯ 1")
-      .card-views__thumbs-slide
-        img(data-lazy="app/img/content/card-thumb.jpg" alt="Предпросмотр ИМЯ 2")
-      .card-views__thumbs-slide
-        img(data-lazy="app/img/content/card-thumb.jpg" alt="Предпросмотр ИМЯ 3")
-      .card-views__thumbs-slide
-        img(data-lazy="app/img/content/card-thumb.jpg" alt="Предпросмотр ИМЯ 4")
-      .card-views__thumbs-slide
-        img(data-lazy="app/img/content/card-thumb.jpg" alt="Предпросмотр ИМЯ 5")
-      .card-views__thumbs-slide
-        img(data-lazy="app/img/content/card-thumb.jpg" alt="Предпросмотр ИМЯ 6")
-      .card-views__thumbs-slide
-        img(data-lazy="app/img/content/card-thumb.jpg" alt="Предпросмотр ИМЯ 7")
+      .card-views__thumbs-slide(style="background-image: url('app/img/content/card-thumb.jpg');")
+      .card-views__thumbs-slide(style="background-image: url('app/img/content/card-thumb.jpg');")
+      .card-views__thumbs-slide(style="background-image: url('app/img/content/card-thumb.jpg');")
+      .card-views__thumbs-slide(style="background-image: url('app/img/content/card-thumb.jpg');")
+      .card-views__thumbs-slide(style="background-image: url('app/img/content/card-thumb.jpg');")
+      .card-views__thumbs-slide(style="background-image: url('app/img/content/card-thumb.jpg');")
+      .card-views__thumbs-slide(style="background-image: url('app/img/content/card-thumb.jpg');")
     button.card-views__thumbs-video.video(type="button" aria-label="Включить видео ИМЯ")
       +icon('play')
       span Видео
@@ -28,19 +21,12 @@
     button.card-views__display-arrow.next(type="button" aria-label="Следующее фото")
       +icon('arrow-right')
     .card-views__display-slider
-      .card-views__display-slide
-        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 1")
-      .card-views__display-slide
-        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 2")
-      .card-views__display-slide
-        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 3")
-      .card-views__display-slide
-        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 4")
-      .card-views__display-slide
-        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 5")
-      .card-views__display-slide
-        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 6")
-      .card-views__display-slide
-        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 7")
+      .card-views__display-slide(style="background-image: url('app/img/content/card.jpg');")
+      .card-views__display-slide(style="background-image: url('app/img/content/card.jpg');")
+      .card-views__display-slide(style="background-image: url('app/img/content/card.jpg');")
+      .card-views__display-slide(style="background-image: url('app/img/content/card.jpg');")
+      .card-views__display-slide(style="background-image: url('app/img/content/card.jpg');")
+      .card-views__display-slide(style="background-image: url('app/img/content/card.jpg');")
+      .card-views__display-slide(style="background-image: url('app/img/content/card.jpg');")
     .card-views__display-video
       video(data-video="app/img/content/videoplayback.mp4" controls)
