--- a/dev/static/stylus/section/card/views.styl
+++ b/dev/static/stylus/section/card/views.styl
@@ -38,13 +38,20 @@
 
 .card-views__thumbs-slide
   cursor pointer
+  width 60px
+  min-height 80px
+  background-size cover
+  border-radius 5px
+  overflow hidden
   &+&
     margin-top 20px
   @media (max-width breakpoint-md)
+    min-height 6px
     width 6px
     height 6px
     border-radius 50%
     background-color #fff
+    background-image none !important
     cursor pointer
     &.slick-current
       background-color gray-2
@@ -102,20 +109,18 @@
 .card-views__display
   position relative
   align-self flex-start
-  max-height 525px
+  width 100%
+  height 525px
   overflow hidden
   @media (max-width breakpoint-lg)
-    max-height 400px
+    height 400px
   @media (max-width breakpoint-md)
     width 100%
-    min-height 525px
-    max-height 525px
+    height 600px
   @media (max-width breakpoint-sm)
-    min-height 505px
-    max-height 505px
+    height 505px
   @media (max-width breakpoint-ssm)
-    min-height 425px
-    max-height 425px
+    height 425px
 
 .card-views__display-text
   position absolute
@@ -155,10 +160,14 @@
     right 0
 
 .card-views__display-slider
+  height 100%
   max-width 390px
   border-radius 10px
   overflow hidden
   z-index 0
+  .slick-list,
+  .slick-track
+    height 100%
   .slick-dots
     display flex
     justify-content center
@@ -179,18 +188,14 @@
   @media (max-width breakpoint-lg)
     max-width 300px
   @media (max-width breakpoint-md)
-    max-width 480px
+    max-width 100%
     border-radius 0
-    margin 0 auto
-  @media (max-width breakpoint-sm)
-    max-width 375px
     
 
 .card-views__display-slide
   @media (max-width breakpoint-md)
-    img
-      display block
-      margin 0 auto
+    background-repeat no-repeat
+    background-size cover
 
 .card-views__display-video
   position absolute
