add input in calc

--- a/dev/pug/section/card/info.pug
+++ b/dev/pug/section/card/info.pug
@@ -56,4 +56,4 @@
             span.card-info__readiness-value 192
   .card-info__actions
     button.btn.card-info__btn(type="button") Заказать фотосессию
-    button.card-info__next.card-info__legend(type="button" data-remodal-target="next_name_slug") Перейти к следующей модели
+    button.card-info__next.card-info__legend(type="button") Перейти к следующей модели
