--- a/dev/static/stylus/section/payment/calculator.styl
+++ b/dev/static/stylus/section/payment/calculator.styl
@@ -180,6 +180,11 @@
 .payment-calculator__item-sub-input
   display none
 
+.payment-calculator__item-sub-google
+  font-size 14px
+  color gray-4
+  margin-bottom 5px
+
 .payment-calculator__item-count
   width 115px
   margin-right 25px
