--- a/dev/static/stylus/common/form-group.styl
+++ b/dev/static/stylus/common/form-group.styl
@@ -38,6 +38,8 @@
     border-color gray-1
   &[data-summ]
     font-family -apple-system, 'Roboto', Arial, sans-serif
+  &.invalid
+    border-color color-red
 
 .form-group__checkbox
   display none
