--- a/dev/static/stylus/section/payment/calculator.styl
+++ b/dev/static/stylus/section/payment/calculator.styl
@@ -176,6 +176,11 @@
   span
     color gray-4
     letter-spacing 0.8px
+  &.invalid
+    svg
+      fill color-red
+    span
+      color color-red
 
 .payment-calculator__item-sub-input
   display none
